<resources>
    <string name="app_name">nsd-example</string>
    <string name="register_service">Register service</string>
    <string name="de_register_service">De-register service</string>
    <string name="discover_service">Discover service</string>
    <string name="nsd_service_registered">NSD Service Registered</string>
    <string name="nsd_service_not_registered">NSD Service not Registered</string>
    <string name="enter_service_name">Enter service-name</string>
    <string name="enter_service_type_ex_nsd_service_tcp">Enter service-type (ex: _nsd_service._tcp)</string>
    <string name="start_discovery">Start discovery</string>
    <string name="console_n_n_discovery_not_started_yet"><![CDATA[#### [ Console ] ####\n\n> Discovery not started yet.]]></string>
    <string name="console_n_n_service_not_started_yet"><![CDATA[#### [ Console ] ####\n\n> No service registered yet.]]></string>
    <string name="enter_service_port_ex_8085">Enter service-port (ex: 8085)</string>
</resources>